test: 修改測試用連結

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
     <a routerLink="/header">header</a>
   </li>
   <li>
-    <a routerLink="/main">main</a>
+    <a routerLink="/main/all-post">all-post</a>
   </li>
 </ul>
