--- a/src/app/components/post-edit/post-edit.component.html
+++ b/src/app/components/post-edit/post-edit.component.html
@@ -1,19 +1,47 @@
 <app-main-header-primary title="張貼動態"></app-main-header-primary>
-<div class="d-flex flex-column border border-2 bd-black bg-white rounded-2 box-shadow-d-2 box-shadow-black p-4">
-  <h3 class="fs-6 lh-base text-black mb-1" font="noto">貼文內容</h3>
-  <textarea class="post-edit-textarea border border-2 bd-black custom-input-placeholder-gray-1100 mb-3" name="" id="" cols="30" rows="10" placeholder="輸入您的貼文內容"></textarea>
-  <div class="mb-3">
-    <button type="button" class="py-1 px-4 rounded-1 custom-btn-black custom-btn-black--hover lh-base" font="noto">上傳圖片</button>
-  </div>
-  <div>
-    <div class="mb-4">
-      <app-post-image></app-post-image>
+<form [formGroup]="postForm" (ngSubmit)="createPost()">
+<div
+  class="d-flex flex-column border border-2 bd-black bg-white rounded-2 box-shadow-d-2 box-shadow-black p-4"
+>
+    <h3 class="fs-6 lh-base text-black mb-1" font="noto">貼文內容</h3>
+    <textarea
+      class="post-edit-textarea border border-2 bd-black custom-input-placeholder-gray-1100 mb-3"
+      name=""
+      id=""
+      cols="30"
+      rows="10"
+      placeholder="輸入您的貼文內容"
+      formControlName="content"
+    ></textarea>
+    <div class="mb-3">
+      <label
+        id="IMG_FILE"
+        class="upload-btn py-1 px-4 rounded-1 custom-btn-black custom-btn-black--hover lh-base"
+        font="noto"
+      >
+        <input type="file" class="d-none" (change)="onFileSelected($event)" accept="image/png, image/jpeg"/>
+        上傳圖片
+      </label>
     </div>
-    <p font="noto" class="text-center fs-7 lh-m-base text-red-1100 mb-3">
-      圖片檔案過大，僅限 1mb 以下檔案<br> 圖片格式錯誤，僅限 JPG、PNG 圖片
-    </p>
+    <div>
+      <div class="mb-4" *ngIf="imgUrl!==''">
+        <app-post-image [imgUrl]="imgUrl"></app-post-image>
+      </div>
+      <p font="noto" class="text-center fs-7 lh-m-base text-red-1100 mb-3">
+        圖片檔案過大，僅限 1mb 以下檔案<br />
+        圖片格式錯誤，僅限 JPG、PNG 圖片
+      </p>
+    </div>
+    <div class="d-flex justify-content-center">
+      <button
+        type="submit"
+        class="custom-btn-second custom-btn-gray-1200 custom-btn-yellow-1200--hover box-shadow-lb-1--hover box-shadow-black-hover text-black fs-6 lh-sm-base rounded-2"
+      >
+        送出貼文
+      </button>
+    </div>
+    <div class="d-none">
+      <input type="text" formControlName="imgUrl">
+    </div>
   </div>
-  <div class="d-flex justify-content-center">
-    <button type="button" class="custom-btn-second custom-btn-gray-1200 custom-btn-yellow-1200--hover box-shadow-lb-1--hover box-shadow-black-hover text-black fs-6 lh-sm-base rounded-2">送出貼文</button>
-  </div>
-</div>
+</form>
