--- a/src/app/components/like-user/like-user.component.html
+++ b/src/app/components/like-user/like-user.component.html
@@ -12,7 +12,7 @@
       </p>
     </div>
     <div class="h-100 d-flex align-items-center fs-7 lh-m-base me-3" font="noto">
-      <div class="d-flex flex-column align-items-center like-btn me-3 pe-1">
+      <div class="d-flex flex-column align-items-center like-btn me-3 pe-1" (click)="deleteLike()">
         <img class="like-icon" src="/assets/like.svg" alt="讚">
         <p class="mb-0" font="noto">取消</p>
       </div>
