--- a/src/app/components/success-toast/success-toast.component.html
+++ b/src/app/components/success-toast/success-toast.component.html
@@ -1,7 +1,7 @@
 <div class="position-fixed top-0 p-4 d-flex justify-content-center w-100">
   <div class="toast" id="SUCCESS_TOAST" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
-      <strong class="me-auto">更新成功</strong>
+      <strong class="me-auto">做得好！</strong>
     </div>
     <div class="toast-body">
       {{successMessage}}
