fix: 修正圖片部屬後讀取不到問題

--- a/src/app/components/following-media/following-media.component.html
+++ b/src/app/components/following-media/following-media.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex bg-white border border-2 bd-black box-shadow-d-2 box-shadow-black rounded-2 p-3">
   <div class="d-flex align-items-center m-auto me-3">
-    <img class="following-user-photo" src="/assets/user.png" alt="">
+    <img class="following-user-photo" src="assets/user.png" alt="">
   </div>
   <div class="d-flex justify-content-between w-100">
     <div>
