--- a/src/app/components/mobile-navigator-bar/mobile-navigator-bar.component.html
+++ b/src/app/components/mobile-navigator-bar/mobile-navigator-bar.component.html
@@ -1,15 +1,15 @@
 
 <ul class="navigator-bar list-unstyled d-flex bd-black justify-content-around bg-teal py-2">
   <li>
-    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goAllPost()"><img class="home-icon filter-invert-1--hover" src="/assets/home.svg" alt=""></button>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goAllPost()"><img class="home-icon filter-invert-1--hover" src="assets/home.svg" alt=""></button>
   </li>
   <li>
-    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goFollowList()"><img class="alert-icon filter-invert-1--hover" src="/assets/bell-regular.svg" alt=""></button>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goFollowList()"><img class="alert-icon filter-invert-1--hover" src="assets/bell-regular.svg" alt=""></button>
   </li>
   <li>
-    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goLikeList()"><img class="like-icon filter-invert-1--hover" src="/assets/like.svg" alt=""></button>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-white bg-primary--hover" (click)="goLikeList()"><img class="like-icon filter-invert-1--hover" src="assets/like.svg" alt=""></button>
   </li>
   <li>
-    <button class="add-btn navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-primary bg-blue-700--hover" (click)="goPostEdit()"><img class="add-icon" src="/assets/add.svg" alt=""></button>
+    <button class="add-btn navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-primary bg-blue-700--hover" (click)="goPostEdit()"><img class="add-icon" src="assets/add.svg" alt=""></button>
   </li>
 </ul>
