--- a/src/app/components/personal-profile-edit/personal-profile-edit.component.html
+++ b/src/app/components/personal-profile-edit/personal-profile-edit.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column align-items-center">
   <img
     class="personal-profile-photo mb-3"
-    src="/assets/user.png"
+    src="assets/user.png"
     alt="大頭貼"
   /><button
     type="button"
