--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="d-flex align-items-center mb-3 pb-1">
     <div class="post-like-btn d-inline-flex rounded-5 me-2" (click)="toggleLike()">
-      <img class="post-like" src="/assets/like.svg" alt="讚">
+      <img class="post-like" src="assets/like.svg" alt="讚">
     </div>
     <p class="mb-0" font="baloo">{{post.likes.length}}</p>
   </div>
