--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
   <li class="mb-4">
     <div class="d-flex align-items-center cursor-pointer" (click)="linkToFollowing()">
       <button class="d-flex justify-content-center align-items-center sidebar-btn custom-btn-info custom-btn-info--hover rounded-circle custom-bd-1 bd-black me-3">
-        <img class="bell-icon" src="/assets/bell-regular.svg" alt="鈴鐺">
+        <img class="bell-icon" src="assets/bell-regular.svg" alt="鈴鐺">
       </button>
       <p class="text-black fw-bold lh-base mb-0" font="noto">追蹤名單</p>
     </div>
@@ -19,7 +19,7 @@
   <li class="">
     <div class="d-flex align-items-center cursor-pointer" (click)="linkToLikeList()">
       <button class="d-flex justify-content-center align-items-center sidebar-btn custom-btn-info custom-btn-info--hover rounded-circle custom-bd-1 bd-black me-3">
-        <img class="like-icon" src="/assets/like.svg" alt="讚">
+        <img class="like-icon" src="assets/like.svg" alt="讚">
       </button>
       <p class="text-black fw-bold lh-base mb-0" font="noto">我按讚的文章</p>
     </div>
