fix: 修正圖片路徑問題

--- a/src/app/components/post-search-bar/post-search-bar.component.scss
+++ b/src/app/components/post-search-bar/post-search-bar.component.scss
@@ -19,7 +19,7 @@
 
 .search-sort-wrapper::after {
   content: "　";
-  background-image: url("./assets/chevron-down-solid.svg");
+  background-image: url("/assets/chevron-down-solid.svg");
   position: absolute;
   background-repeat: no-repeat;
   right: 0;
