--- a/src/scss/utils/_background.scss
+++ b/src/scss/utils/_background.scss
@@ -27,7 +27,7 @@
 }
 
 .custom-bg-primary {
-  background: url(./assets/bg.svg);
+  background-image: url('../../assets/bg.svg');
 }
 
 .bg-gray-1200 {
