--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,6 +16,9 @@
           <li class="mb-3">
             <input type="password" name="" id="" class="custom-input custom-input-black w-100" placeholder="Password" formControlName="password">
           </li>
+          <li class="mb-3 d-flex justify-content-center" *ngIf="errorMessage!==''">
+            <p class="fz-7 lh-m-base text-red-1100 mb-0" font="noto">{{ errorMessage }}</p>
+          </li>
           <li class="mb-3">
             <button type="submit" [disabled]="!loginForm.valid" class="custom-btn-secondary-disabled custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">登入</button>
           </li>
