--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,1 +1,19 @@
-<p>sign-in works!</p>
+<form [formGroup]="signInForm" (ngSubmit)="login()">
+  <ul class="list-unstyled">
+    <li class="mb-3">
+      <input type="email" name="" id="" class="custom-input custom-input-black w-100" placeholder="Email" formControlName="email">
+    </li>
+    <li class="mb-3">
+      <input type="password" name="" id="" class="custom-input custom-input-black w-100" placeholder="Password" formControlName="password">
+    </li>
+    <li class="mb-3 d-flex justify-content-center" *ngIf="errorMessage!==''">
+      <p class="fz-7 lh-m-base text-red-1100 mb-0" font="noto">{{ errorMessage }}</p>
+    </li>
+    <li class="mb-3">
+      <button type="submit" [disabled]="!signInForm.valid" class="custom-btn-secondary-disabled custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">登入</button>
+    </li>
+    <li class="text-center">
+      <a href="#" class="text-dark text-decoration-none custom-link-primary--hover text-underline--hover" font="azeret">註冊帳號</a>
+    </li>
+  </ul>
+</form>
