--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,25 +8,13 @@
     <div class="col-12 col-md-6 d-flex justify-content-center flex-column">
       <h1 class="logo lh-min-base fw-bold text-center text-primary mb-0" font="paytone">MetaWall</h1>
       <h2 class="subtitle fw-bold text-center text-black" font="helvetica">到元宇宙展開全新社交圈</h2>
-      <form [formGroup]="loginForm" (ngSubmit)="login()">
-        <ul class="list-unstyled">
-          <li class="mb-3">
-            <input type="email" name="" id="" class="custom-input custom-input-black w-100" placeholder="Email" formControlName="email">
-          </li>
-          <li class="mb-3">
-            <input type="password" name="" id="" class="custom-input custom-input-black w-100" placeholder="Password" formControlName="password">
-          </li>
-          <li class="mb-3 d-flex justify-content-center" *ngIf="errorMessage!==''">
-            <p class="fz-7 lh-m-base text-red-1100 mb-0" font="noto">{{ errorMessage }}</p>
-          </li>
-          <li class="mb-3">
-            <button type="submit" [disabled]="!loginForm.valid" class="custom-btn-secondary-disabled custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">登入</button>
-          </li>
-          <li class="text-center">
-            <a href="#" class="text-dark text-decoration-none custom-link-primary--hover text-underline--hover" font="azeret">註冊帳號</a>
-          </li>
-        </ul>
-      </form>
+      <div *ngIf="isSignInPage;then signInContent else signUpContent"></div>
+      <ng-template #signInContent>
+        <app-sign-in (isSignUp)="isSignUp()"></app-sign-in>
+      </ng-template>
+      <ng-template #signUpContent>
+        <app-sign-up (isSignIn)="isSignIn()"></app-sign-up>
+      </ng-template>
     </div>
   </div>
 
