--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="signInForm" (ngSubmit)="login()">
+<form [formGroup]="signInForm" (ngSubmit)="signIn()">
   <ul class="list-unstyled">
     <li class="mb-3">
       <input type="email" name="" id="" class="custom-input custom-input-black w-100" placeholder="Email" formControlName="email">
@@ -13,7 +13,7 @@
       <button type="submit" [disabled]="!signInForm.valid" class="custom-btn-secondary-disabled custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">登入</button>
     </li>
     <li class="text-center">
-      <a href="#" class="text-dark text-decoration-none custom-link-primary--hover text-underline--hover" font="azeret">註冊帳號</a>
+      <a role="button" class="text-dark text-decoration-none custom-link-primary--hover text-underline--hover" font="azeret" (click)="goSignUpPage()">註冊帳號</a>
     </li>
   </ul>
 </form>
