--- a/src/app/components/warning-toast/warning-toast.component.html
+++ b/src/app/components/warning-toast/warning-toast.component.html
@@ -1,4 +1,4 @@
-<div class="position-fixed top-0 p-4 d-flex justify-content-center w-100">
+<div class="position-fixed top-0 p-4 d-flex justify-content-center w-100 pointer-none">
   <div class="toast" id="WARNING_TOAST" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <strong class="me-auto">注意</strong>
