--- a/src/app/components/header-profile/header-profile.component.html
+++ b/src/app/components/header-profile/header-profile.component.html
@@ -1,7 +1,14 @@
-<div class="d-flex align-items-center">
-  <img class="header-profile-photo" [src]="userImgUrl" alt="用戶大頭貼">
-  <div>
-    <p class="text-black fw-bold lh-min-base letter-spacing-0 mb-1" font="azeret">{{userProfile.nickName}}</p>
-    <div class="custom-underline"></div>
+<div class="position-relative">
+  <div class="d-flex align-items-center cursor-pointer" (click)="toggleNavigatorDropDown()">
+    <img class="header-profile-photo" [src]="userImgUrl" alt="用戶大頭貼">
+    <div>
+      <p class="text-black fw-bold lh-min-base letter-spacing-0 mb-1" font="azeret">{{userProfile.nickName}}</p>
+      <div class="custom-underline"></div>
+    </div>
   </div>
+  <ul class="navigator-dropdown right-0 list-unstyled media-secondary-wrapper position-absolute mt-2" *ngIf="isShowNavigatorDropDown">
+    <li><div class="navigator-dropdown-btn text-center lh-base border border-2 bd-black" type="button" font="noto" (click)="goPersonPost()">我的貼文牆</div></li>
+    <li><div class="navigator-dropdown-btn lh-base text-center border border-2 bd-black" type="button" (click)="goUserProfile()">修改個人資料</div></li>
+    <li><div class="navigator-dropdown-btn navigator-dropdown-btn-last-child lh-base text-center border border-2 bd-black" type="button" (click)="logout()">登出</div></li>
+  </ul>
 </div>
