--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "./utils/box-shadow";
 @import "./utils/pseudo";
 @import "./utils/line-height";
+@import "./utils/text-decoration";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
