feat: post-list區塊添加post-personal-profile component

--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,3 +1,6 @@
+<div class="mb-3" *ngIf="router.url === '/main/person-post'">
+  <app-post-personal-profile></app-post-personal-profile>
+</div>
 <div class="mb-3">
   <app-post-search-bar></app-post-search-bar>
 </div>
