fix: 修正person-post-profile component 顯示時機

--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3" *ngIf="router.url === '/main/person-post'">
+<div class="mb-3" *ngIf="isShowPostPersonalProfile()">
   <app-post-personal-profile></app-post-personal-profile>
 </div>
 <div class="mb-3">
