--- a/src/app/components/post-personal-profile/post-personal-profile.component.html
+++ b/src/app/components/post-personal-profile/post-personal-profile.component.html
@@ -1,11 +1,11 @@
 <div class="media-primary-wrapper pseudo-after-bd-radius d-flex rounded-2">
   <div class="">
-    <img class="media-primary-photo rounded-start post-personal-profile-photo bd-black" src="assets/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+    <img class="media-primary-photo rounded-start post-personal-profile-photo bd-black bg-white" [src]="imgUrl" alt="">
   </div>
   <div class="media-primary-content rounded-end d-flex align-items-center justify-content-between bg-white w-100 px-3">
     <div>
-      <p class="mb-0" font="noto">阿爾敏</p>
-      <p class="mb-0">987,987 人追蹤</p>
+      <p class="mb-0" font="noto">{{user?.nickName}}</p>
+      <p class="mb-0">{{following.length }} 人追蹤</p>
     </div>
     <div>
       <button font="noto" class="follow-btn btn btn-warning fw-bold lh-base border border-2 bd-black box-shadow-d-1 box-shadow-black">追蹤</button>
