feat: 添加共通class 背景色，並更改box-shadow的顏色

--- a/src/scss/utils/_background.scss
+++ b/src/scss/utils/_background.scss
@@ -18,6 +18,10 @@
   background: $red-1000;
 }
 
+.bg-red-1000--hover:hover {
+  background: tint($red-1000, 30%) !important;
+}
+
 .bg-primary--hover:hover {
   background: $blue !important;
 }
