--- a/src/app/components/post-personal-profile/post-personal-profile.component.html
+++ b/src/app/components/post-personal-profile/post-personal-profile.component.html
@@ -5,10 +5,13 @@
   <div class="media-primary-content rounded-end d-flex align-items-center justify-content-between bg-white w-100 px-3">
     <div>
       <p class="mb-0" font="noto">{{user?.nickName}}</p>
-      <p class="mb-0">{{following.length }} 人追蹤</p>
+      <p class="mb-0">{{targetFollowing.length }} 人追蹤</p>
     </div>
-    <div>
-      <button font="noto" class="follow-btn btn btn-warning fw-bold lh-base border border-2 bd-black box-shadow-d-1 box-shadow-black">追蹤</button>
+    <div *ngIf="isShowFollowBtn">
+      <button font="noto" class="follow-btn btn btn-warning fw-bold lh-base border border-2 bd-black box-shadow-d-1 box-shadow-black" (click)="addFollowing()">追蹤</button>
+    </div>
+    <div *ngIf="!isShowFollowBtn">
+      <button font="noto" class="follow-btn btn bg-red-1000 bg-red-1000--hover text-white text-black--hover fw-bold lh-base border border-2 bd-black box-shadow-d-1 box-shadow-black" (click)="deleteFollowing()">取消追蹤</button>
     </div>
   </div>
 </div>
