--- a/src/app/components/like-user/like-user.component.html
+++ b/src/app/components/like-user/like-user.component.html
@@ -16,7 +16,7 @@
         <img class="like-icon" src="assets/like.svg" alt="讚">
         <p class="mb-0" font="noto">取消</p>
       </div>
-      <div class="d-flex flex-column align-items-center check-btn ms-3 pe-1">
+      <div class="d-flex flex-column align-items-center check-btn ms-3 pe-1" (click)="goViewPost()">
         <img class="check-icon" src="assets/circle-right-regular.svg" alt="查看">
         <p class="mb-0" font="noto">查看</p>
       </div>
