feat: 使按讚列表的用戶可以點擊

--- a/src/app/components/like-user/like-user.component.html
+++ b/src/app/components/like-user/like-user.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="d-flex justify-content-between w-100">
     <div>
-      <p class="lh-base mb-0" font="noto">
+      <p class="lh-base underline--hover cursor-pointer mb-0" font="noto" (click)="goPersonalPostPage()">
         {{nickName}}
       </p>
       <p class="text-gray-1100 lh-m-base fs-7 mb-0" font="noto">
