--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <div class="mb-3" *ngIf="isShowPostPersonalProfile()">
   <app-post-personal-profile></app-post-personal-profile>
 </div>
-<div class="mb-3">
+<div class="mb-3" *ngIf="isShowSearchBar()">
   <app-post-search-bar></app-post-search-bar>
 </div>
 <ul class="list-unstyled" *ngIf="postList.length > 0">
