--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,11 +1,10 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
   <div class="text-center">
       <h1 class="display-1 fw-bold">404</h1>
-      <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
-      <p class="lead">
-          The page you’re looking for doesn’t exist.
+      <p class="fs-3" font="noto"> <span class="text-danger">Opps!</span> 沒找到該頁面！</p>
+      <p class="lead" font="noto">
+          您所尋找的頁面並不存在。
         </p>
-      <a href="#" class="btn btn-primary" (click)="goAllPostPage()">Go Home</a>
-      <a routerLink="/main/all-post">header</a>
+      <a href="#" class="btn btn-primary" (click)="goAllPostPage()">回到全體動態牆</a>
   </div>
 </div>
