--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,13 +10,18 @@
       <h2 class="subtitle fw-bold text-center text-black" font="helvetica">到元宇宙展開全新社交圈</h2>
       <div *ngIf="isSignInPage;then signInContent else signUpContent"></div>
       <ng-template #signInContent>
-        <app-sign-in (isSignUp)="isSignUp()"></app-sign-in>
+        <app-sign-in (isLoading)="onLoading($event)" (isSignUp)="isSignUp()"></app-sign-in>
       </ng-template>
       <ng-template #signUpContent>
-        <app-sign-up (isSignIn)="isSignIn()"></app-sign-up>
+        <app-sign-up (isLoading)="onLoading($event)" (isSignIn)="isSignIn()"></app-sign-up>
       </ng-template>
     </div>
   </div>
 
 </div>
+</div>
+<div class="position-absolute top-50 d-flex justify-content-center w-100" *ngIf="isLoading">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
 </div>
