--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "./utils/pseudo";
 @import "./utils/line-height";
 @import "./utils/text-decoration";
+@import "./utils/object-fit";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
