--- a/src/app/components/personal-profile-edit/personal-profile-edit.component.html
+++ b/src/app/components/personal-profile-edit/personal-profile-edit.component.html
@@ -1,72 +1,70 @@
-<div class="d-flex flex-column align-items-center">
-  <img
-    class="personal-profile-photo mb-3 rounded-circle border border-2 bd-black"
-    [src]="avatar"
-    alt="用戶大頭貼"
-  />
-  <!-- <button
-    type="button"
-    class="bg-black text-white fs-6 lh-base py-2 px-4"
-    font="noto"
-  >
-    上傳大頭照
-  </button> -->
-  <label
-    id="IMG_FILE"
-    class="bg-black text-white fs-6 lh-base py-2 px-4 cursor-pointer"
-    font="noto"
-  >
-    <input
-      type="file"
-      class="d-none"
-      (change)="onFileSelected($event)"
-      accept="image/png, image/jpeg"
+<form [formGroup]="userForm" (ngSubmit)="uploadUserProfile()">
+  <div class="d-flex flex-column align-items-center">
+    <img
+      class="personal-profile-photo mb-3 rounded-circle border border-2 bd-black object-cover"
+      [src]="imgUrl"
+      alt="用戶大頭貼"
     />
-    上傳大頭照
-  </label>
-</div>
-<ul class="list-unstyled pb-2 mb-4">
-  <li class="d-flex flex-column mb-3">
-    <label for="nickName" class="fs-6 lh-base mb-1" font="noto">暱稱</label>
-    <input
-      class="custom-input custom-input-black"
-      id="nickName"
-      type="text"
-      placeholder="邊緣小杰"
-    />
-  </li>
-  <li class="d-flex flex-column">
-    <label class="fs-6 lh-base mb-1" font="noto">性別</label>
-    <ul class="list-unstyled d-flex mb-0 d-flex">
-      <li class="d-flex align-items-center me-4">
-        <input class="pe-2" type="radio" id="sexMale" name="sex" value="male" />
-        <label class="ms-1" for="sexMale">男性</label><br />
-      </li>
-      <li class="d-flex align-items-center">
-        <input
-          class="pe-2"
-          type="radio"
-          id="sexFemale"
-          name="sex"
-          value="female"
-        />
-        <label class="ms-1" for="sexFemale">女性</label><br />
-      </li>
-    </ul>
-  </li>
-</ul>
-<div class="d-flex justify-content-center mb-3">
-  <p class="text-center text-red-1100 fs-7 lh-m-base mb-0" font="noto">
-    1.圖片寬高比必需為 1:1，請重新輸入 <br />2. 解析度寬度至少
-    300像素以上，請重新輸入
-  </p>
-</div>
-<div class="d-flex justify-content-center w-100">
-  <button
-    type="button"
-    class="personal-profile-edit-submit custom-btn custom-btn-primary custom-btn-yellow-1200--hover w-100 fw-bold pt-3 pb-3"
-    font="azeret"
-  >
-    送出內容
-  </button>
-</div>
+    <label
+      id="IMG_FILE"
+      class="bg-black text-white fs-6 lh-base py-2 px-4 cursor-pointer"
+      font="noto"
+    >
+      <input
+        type="file"
+        class="d-none"
+        (change)="onFileSelected($event)"
+        accept="image/png, image/jpeg"
+      />
+      上傳大頭照
+    </label>
+  </div>
+  <ul class="list-unstyled pb-2 mb-4">
+    <li class="d-flex flex-column mb-3">
+      <label for="nickName" class="fs-6 lh-base mb-1" font="noto">暱稱</label>
+      <input
+        class="custom-input custom-input-black"
+        id="nickName"
+        type="text"
+        placeholder="邊緣小杰"
+        formControlName="nickName"
+      />
+    </li>
+    <li class="d-flex flex-column">
+      <label class="fs-6 lh-base mb-1" font="noto">性別</label>
+      <ul class="list-unstyled d-flex mb-0 d-flex">
+        <li class="d-flex align-items-center me-4">
+          <input class="pe-2" type="radio" id="sexMale" name="sex" value="male" formControlName="sex"/>
+          <label class="ms-1" for="sexMale">男性</label><br />
+        </li>
+        <li class="d-flex align-items-center">
+          <input
+            class="pe-2"
+            type="radio"
+            id="sexFemale"
+            name="sex"
+            value="female"
+            formControlName="sex"
+          />
+          <label class="ms-1" for="sexFemale">女性</label><br />
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <div class="d-flex justify-content-center mb-3">
+    <p class="text-center text-red-1100 fs-7 lh-m-base mb-0" font="noto">
+      1.圖片寬高比必需為 1:1，請重新輸入 <br />2. 解析度寬度至少
+      300像素以上，請重新輸入
+    </p>
+  </div>
+  <div class="d-flex justify-content-center w-100">
+    <button
+      type="submit"
+      [disabled]="!userForm.valid"
+      class="personal-profile-edit-submit custom-btn custom-btn-primary custom-btn-yellow-1200--hover w-100 fw-bold pt-3 pb-3"
+      font="azeret"
+    >
+      送出內容
+    </button>
+  </div>
+</form>
