fix: 修正大頭貼圖片顯示效果

--- a/src/app/components/header-profile/header-profile.component.html
+++ b/src/app/components/header-profile/header-profile.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative">
   <div class="d-flex align-items-center cursor-pointer" (click)="toggleNavigatorDropDown()">
-    <img class="header-profile-photo rounded-circle border border-2 bd-black" [src]="userImgUrl" alt="用戶大頭貼">
+    <img class="header-profile-photo rounded-circle border border-2 bd-black object-cover" [src]="userImgUrl" alt="用戶大頭貼">
     <div>
       <p class="text-black fw-bold lh-min-base letter-spacing-0 mb-1" font="azeret">{{userProfile.nickName}}</p>
       <div class="custom-underline"></div>
