--- a/src/app/components/personal-profile-edit/personal-profile-edit.component.html
+++ b/src/app/components/personal-profile-edit/personal-profile-edit.component.html
@@ -61,7 +61,7 @@
     <button
       type="submit"
       [disabled]="!userForm.valid"
-      class="personal-profile-edit-submit custom-btn custom-btn-primary custom-btn-yellow-1200--hover w-100 fw-bold pt-3 pb-3"
+      class="custom-btn-secondary-disabled personal-profile-edit-submit custom-btn custom-btn-primary custom-btn-yellow-1200--hover w-100 fw-bold pt-3 pb-3"
       font="azeret"
     >
       送出內容
