--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,7 @@
 @import "./utils/line-height";
 @import "./utils/text-decoration";
 @import "./utils/object-fit";
+@import "./utils/z-index";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
