--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="signInForm" (ngSubmit)="signIn()">
   <ul class="list-unstyled">
     <li class="mb-3">
-      <input type="email" name="" id="" class="custom-input custom-input-black w-100" placeholder="Email" formControlName="email">
+      <input type="email" name="email" class="custom-input custom-input-black w-100" placeholder="Email" formControlName="email">
     </li>
     <li class="mb-3">
-      <input type="password" name="" id="" class="custom-input custom-input-black w-100" placeholder="Password" formControlName="password">
+      <input type="password" name="password" id="" class="custom-input custom-input-black w-100" placeholder="Password" formControlName="password">
     </li>
     <li class="mb-3 d-flex justify-content-center" *ngIf="errorMessage!==''">
       <p class="fz-7 lh-m-base text-red-1100 mb-0" font="noto">{{ errorMessage }}</p>
