fix: 修正用戶大頭貼大小問題

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   </li>
   <li class="mb-4">
     <div class="d-flex align-items-center cursor-pointer" (click)="linkToPersonalProfile()">
-      <img class="rounded-circle border border-2 bd-black me-3" [src]="userImgUrl" alt="">
+      <img class="user-photo rounded-circle border border-2 bd-black me-3 object-cover" [src]="userImgUrl" alt="">
       <p class="text-black fw-bold lh-base mb-0" font="noto">{{userProfile.nickName}}</p>
     </div>
   </li>
