--- a/src/app/components/following-media/following-media.component.html
+++ b/src/app/components/following-media/following-media.component.html
@@ -1,19 +1,19 @@
 <div class="d-flex bg-white border border-2 bd-black box-shadow-d-2 box-shadow-black rounded-2 p-3">
   <div class="d-flex align-items-center m-auto me-3">
-    <img class="following-user-photo rounded-circle border border-2 bd-black" src="assets/user.png" alt="">
+    <img class="following-user-photo rounded-circle border border-2 bd-black" [src]="imgUrl" alt="用戶大頭貼">
   </div>
   <div class="d-flex justify-content-between w-100">
     <div>
-      <p class="lh-base mb-0" font="noto">
-        愛爾敏
+      <p class="lh-base underline--hover cursor-pointer mb-0" font="noto" (click)="goPersonalPostPage()">
+        {{_follow?.user?.nickName}}
       </p>
       <p class="text-gray-1100 lh-m-base fs-7 mb-0" font="noto">
-        追蹤時間：2022/1/10 12:00
+        追蹤時間：{{ followDateTime }}
       </p>
     </div>
     <div class="h-100 d-flex align-items-end fs-7 lh-m-base" font="noto">
       <p class="mb-0">
-        您已追蹤 90 天！
+        您已追蹤 {{ followingCountDate }} 天！
       </p>
     </div>
   </div>
