fix: 修正按讚列表的用戶大頭貼顯示效果

--- a/src/app/components/like-user/like-user.component.html
+++ b/src/app/components/like-user/like-user.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex bg-white border border-2 bd-black box-shadow-d-2 box-shadow-black rounded-2 p-3">
   <div class="d-flex align-items-center m-auto me-3">
-    <img class="like-user-photo rounded-circle border border-2 bd-black" [src]="imgUrl" alt="post creator photo">
+    <img class="like-user-photo rounded-circle border border-2 bd-black object-cover" [src]="imgUrl" alt="post creator photo">
   </div>
   <div class="d-flex justify-content-between w-100">
     <div>
