feat: 添加更新密碼以及在登入頁面沒有token直接跳轉到需要token頁面時的錯誤處理
補出：此功能善未完善仍需要調整

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,3 +25,5 @@
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
+<app-warning-toast></app-warning-toast>
+<app-success-toast></app-success-toast>
