fix: 修正post的用戶圖片設定

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="row mb-3">
     <div class="d-none d-md-block col-md-1">
-      <img class="comment-user-photo me-2 rounded-circle border border-2 bd-black" [src]="userImgUrl" alt="用戶照片">
+      <img class="comment-user-photo me-2 rounded-circle border border-2 bd-black object-cover" [src]="userImgUrl" alt="用戶照片">
     </div>
     <div class="col-12 col-md-11 d-flex align-items-center">
       <input type="text" class="comment-input custom-input-sm custom-input-black w-100 lh-sm-base bd-r-0" placeholder="留言..." [(ngModel)]="commentMessage">
