fix: 調整toast顯示的位置

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,5 @@
     <a routerLink="/main/all-post">all-post</a>
   </li>
 </ul> -->
+<app-warning-toast></app-warning-toast>
+<app-success-toast></app-success-toast>
