--- a/src/scss/font/_font.scss
+++ b/src/scss/font/_font.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Helvetica Neue;
-  src: url(/assets/fonts/Helvetica-Neue.ttf) format('truetype');
+  src: url('../../assets/fonts/Helvetica-Neue.ttf') format('truetype');
 }
 
 [font~=paytone] {
